@@ -2,6 +2,7 @@
 
 2021-xx-xx - version 1.x.x
 * Fix: Update tooltip wording when deleting product variation. PR#46
+* Fix: Don't show an admin error notice when a store downgrades to a previous minor version of Subscriptions. WCS#4271
 
 2021-11-12 - version 1.1.0
 * Fix: Add consistent margins to the recurring taxes totals row on the Checkout and Cart block. PR#39
